// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxSwitch customize 1`] = `
<div>
  <label
    class="form-check form-switch large is-invalid is-valid bazinga"
  >
    <span
      class="check-input secondary is-invalid is-valid"
    >
      <input
        class="is-invalid is-valid"
        id="2"
        role="switch"
        type="radio"
      />
    </span>
    Some label
  </label>
</div>
`;

exports[`loads and displays CxSwitch component 1`] = `
<div>
  <label
    class="form-check form-switch"
  >
    <span
      class="check-input"
    >
      <input
        class=""
        data-react-aria-pressable="true"
        role="switch"
        tabindex="0"
        type="checkbox"
      />
    </span>
  </label>
</div>
`;
